tests/compile_fail/escape_scope/scope_guard.stderr
error[E0597]: `guard` does not live long enough
  --> tests/compile_fail/escape_scope/scope_guard.rs:9:21
   |
 8 |         let mut guard = bump.scope_guard();
   |             --------- binding `guard` declared here
 9 |         let scope = guard.scope();
   |                     ^^^^^ borrowed value does not live long enough
...
12 |     }
   |     - `guard` dropped here while still borrowed
13 |
14 |     dbg!(escapee);
   |          ------- borrow later used here
